# project-vynaris

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  build plan and demo scripts.md  docker-compose.yml  install  install.ps1  pyproject.toml  target customer profiles and user stories.md
.claude/: settings.local.json
.claude/skills/8d-drafter/: SKILL.md
.claude/skills/analyze-data/: SKILL.md
.claude/skills/build-mini-app/: SKILL.md
.claude/skills/buyer-compliance-audit/: SKILL.md
.claude/skills/daily-pulse-draft/: SKILL.md
.claude/skills/draft-document/: SKILL.md
.claude/skills/drift-alert-drafter/: SKILL.md
.claude/skills/edpms-reconciliation/: SKILL.md
design-system/: chat-history.md  directions.html  fonts.html  instrument.html  palettes.html  palettes_design_style_and_system.md
vynaris/: __main__.py  app.py  auth.py  config.py  seed_demo.py
vynaris/adapters/: __init__.py  base.py  discord_adapter.py  gchat_adapter.py  msteams_adapter.py  slack_adapter.py  whatsapp_adapter.py
vynaris/agent/: data_tools.py  integration_tools.py  runtime.py  skill_loader.py  system_prompt.py  tools.py
vynaris/db/: __init__.py  bootstrap.py  models.py  seed.py  session.py
vynaris/integrations/: __init__.py  gmail.py
vynaris/services/: channels.py  datasources.py  departments.py  external_links.py  feed.py  gates.py  goals.py  integrations.py  kr_refresh.py  kr_sources.py  onboarding.py  persona_packs.py  routing.py  sample_sqlite.py  scheduled_skills.py  scheduler.py  stream_bus.py  visibility.py  workspace.py
vynaris/web/: deps.py  templating.py
(+52 files in other folders)
