[project]
name = "vynaris"
version = "0.1.0"
description = "Enterprise agentic work OS — goal-aligned agents with hierarchical transparency"
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Dhrumil Barot" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.20",
    "httpx>=0.28.0",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.1",
    "claude-agent-sdk>=0.1.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "aiofiles>=24.1.0",
    "sse-starlette>=2.1.3",
    "itsdangerous>=2.2.0",
    "markdown-it-py>=3.0.0",
    "psutil>=6.1.0",
    "bcrypt>=4.2.0",
    "cryptography>=43.0.0",
    "discord.py>=2.4.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.1",
    "google-api-python-client>=2.150.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
vynaris = "vynaris.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vynaris"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008", "RUF012"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
